# QtFirstProgrammCMake

./: .gitignore  CMakeLists.txt  MainWindow.ui  demo.qrc  demo_fr.qm  demo_fr.ts  demo_ru.ts  main.cpp  mainwindow.cpp  mainwindow.h
